fixed alignment issued for login button

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -21,7 +21,7 @@ body {
 .btn-block {
     color: white;
     padding: 10% 0px;
-    margin: .5em;
+    margin: .5em 0em;
     font-size: 2em;
     background-color: dodgerblue;
     width: 100%;
